add images new file

--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
     <div>
         <h1>Welcome to react</h1>
 
+        <img src="images/NazRoutine.PNG" alt="no image" srcset="">
+
         <p> git init </p>
         <p> git add . </p>
-        <p> git add . </p>
+        <p> git commit -m "add new file" </p>
+        <p> git branch -M main </p>
+        <p> git remote add origin https://github.com/computer10dpi/problem-never-end.git </p>
+        <p> git push -u origin main</p>
+
+        <p> git remote -v</p>
     </div>
 </body>
 </html>
